# mcp-nano-banana

./: .gitignore  README.md  TOOL_DESCRIPTIONS.md  USAGE.md  pyproject.toml
docs/: sample_cursor_config.json  sample_vscode_config.json
mcp_nano_banana/: __init__.py  bridge.py  nano_banana_server.py
scripts/: test_install.sh
src/: __init__.py  __main__.py  bridge.py  nano_banana_server.py
src/resources/: MCP_Best_Practices_Nano_Banana.md
